--- a/src/global/mixins/mixins_typo.scss
+++ b/src/global/mixins/mixins_typo.scss
@@ -66,6 +66,11 @@
   font-family: var(--sbb-typo-type-face-sbb-bold);
 }
 
+@mixin text-xxl--regular {
+  @include text();
+  font-size: pxToRem(var(--lyne-font-size-text-xxl));
+}
+
 @mixin text-xl--regular {
   @include text;
 
