--- a/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
+++ b/src/components/sbb-teaser-hero/sbb-teaser-hero.scss
@@ -2,8 +2,16 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
+@mixin image-aspect-ratio-1-1 {
+  aspect-ratio: 1 / 1;
+}
+
+@mixin image-aspect-ratio-16-9 {
+  aspect-ratio: 16 / 9;
+}
+
 :host {
-  display: block;
+  --panel-opacity-hover: 1;
 }
 
 .teaser-hero {
@@ -13,16 +21,30 @@
   &:focus-visible {
     @include focusOutline;
   }
-}
 
-.teaser-hero__image {
-  display: block;
-}
-
-.teaser-hero__panel {
-  @include absoluteCenterY;
+  &:hover {
+    ::slotted( [slot="panel"] ) {
+      opacity: 1;
+    }
+  }
 }
 
 .teaser-hero__link-info-text {
   @include screenReaderOnly;
+}
+
+
+.teaser-hero__panel {
+  @include  absoluteCenterY();
+}
+
+::slotted( [slot="image"] ) {
+  @include image-aspect-ratio-1-1;
+  display: block;
+  object-fit: cover;
+  width: 100%;
+
+  @include mq($from: small) {
+    @include image-aspect-ratio-16-9;
+  }
 }
