--- a/src/global/core/shared/variables.scss
+++ b/src/global/core/shared/variables.scss
@@ -18,6 +18,7 @@
   --sbb-font-size-text-s: var(--sbb-typo-scale-0-875x);
   --sbb-font-size-text-xs: var(--sbb-typo-scale-0-75x);
   --sbb-font-size-text-xxs: var(--sbb-typo-scale-0-75x);
+  --lyne-font-size-text-xxl:  var(--typo-scale-1-5x);
 
   @include mq($from: small) {
     --sbb-font-size-title-1: var(--sbb-typo-scale-3x);
@@ -37,6 +38,7 @@
 
   @include mq($from: large) {
     --sbb-font-size-title-1: var(--sbb-typo-scale-3-5x);
+    --lyne-font-size-text-xxl:  var(--typo-scale-2-5x);
   }
 
   @include mq($from: ultra) {
