feat: rename lyne to sbb

--- a/src/components/sbb-teaser/styles/sbb-teaser.default.scss
+++ b/src/components/sbb-teaser/styles/sbb-teaser.default.scss
@@ -16,4 +16,4 @@
 @import "./../../../global/global.default.scss";
 
 // Import component styles
-@import "./lyne-teaser.component.scss";
+@import "./sbb-teaser.component.scss";
